[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/boulderforwilliam.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Tower.gd" type="Script" id=2]
[ext_resource path="res://Scenes/TowerScences/Projectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Morsels/Morsel1.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 125.196

[node name="Tower" type="Node2D"]
script = ExtResource( 2 )
projectileScene = ExtResource( 3 )
morsalScene = ExtResource( 4 )

[node name="Range" type="Area2D" parent="."]

[node name="RangeShape" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="SpawnCooldown" type="Timer" parent="."]
autostart = true

[node name="AttackCooldown" type="Timer" parent="."]
autostart = true

[node name="ShootPoint" type="Node2D" parent="."]
position = Vector2( 0, -52 )

[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
[connection signal="timeout" from="SpawnCooldown" to="." method="_on_SpawnCooldown_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_Cooldown_timeout"]
